<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/restaurant_item_background">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_activity_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="none" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/home_activity_fab"
        android:layout_width="@dimen/home_fab_width"
        android:layout_height="@dimen/home_fab_height"
        android:layout_margin="@dimen/home_fab_margin"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_map_marker_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
