...
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_text_input_layout_margin_top">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_restaurant_details_restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_restaurant_name"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/activity_restaurant_details_text_size" />
...
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_text_input_layout_margin_top">>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_restaurant_details_restaurant_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_restaurant_address"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/activity_restaurant_details_text_size" />
...
