<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity_restaurant_details_save"
        android:title="@string/restaurant_details_activity_menu_save"
        app:showAsAction="always" />
</menu>